--- a/simple.html
+++ b/simple.html
@@ -1,4 +1,7 @@
 <!DOCTYPE html>
+<!--
+	Copyright by me
+-->
 <head>
 	<title>Example website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
