master before rebase conflicts

--- a/simple.html
+++ b/simple.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <!--
 	Copyright by me
+	Adding small changes for rebasing conflicts
 -->
 <head>
-	<title>Best website</title>
+	<title>Best website - for real</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
