fb adding trouble edits to simple.html Resolved conflicts

--- a/simple.html
+++ b/simple.html
@@ -16,9 +16,9 @@
 </head>
 <body>
 	<main class="container">
-	<!-- Why content? -->
+	<!-- Content Goes Here -->
 		<p>
-			Some filler content.
+			Just some content. Who needs content?
 		</p>
 	</main>
 	<footer class="container">
