mb conflicting changes established

--- a/simple.html
+++ b/simple.html
@@ -4,7 +4,7 @@
 	Adding small changes for rebasing conflicts
 -->
 <head>
-	<title>Best website - for real</title>
+	<title>Confilcting changes</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -16,9 +16,9 @@
 </head>
 <body>
 	<main class="container">
-	<!-- Content Goes Here -->
+	<!-- Why content? -->
 		<p>
-			Just some content
+			Some filler content.
 		</p>
 	</main>
 	<footer class="container">
