Adding changes after rebase

--- a/simple.html
+++ b/simple.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!--
 	Copyright by me
-	Adding small changes for rebasing conflicts
+	Some more trouble
 -->
 <head>
 	<title>Confilcting changes</title>
