Updating simple.html

--- a/simple.html
+++ b/simple.html
@@ -4,7 +4,7 @@
 	Some more trouble
 -->
 <head>
-	<title>Confilcting changes</title>
+	<title>A new title</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -18,7 +18,7 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some content. Who needs content?
+			This content is brand new.
 		</p>
 	</main>
 	<footer class="container">
