Updating for new version (1.2)

--- a/simple.html
+++ b/simple.html
@@ -4,7 +4,7 @@
 	Some more trouble
 -->
 <head>
-	<title>A new, great title</title>
+	<title>A new, great title, this time more tags</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
